BaSP-W07-2022: corrections in Sign-Up form alignment

--- a/Semana-07/styles/sign-up.css
+++ b/Semana-07/styles/sign-up.css
@@ -52,7 +52,7 @@ footer {
 .form-inputs {
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    margin-left: 20px;
 }
 
 .form-btn-links {
